tests/NormalTests/paczka1/small_fuzzy/88906678.err
Error in line 10: A1 A897 7,8
Error in line 12: A1 S32 90,8
Error in line 16: A1 S32 205,2
